<resources>
    <string name="app_name">Tripd</string>

    <!-- String name for Trip Name id -->
    <string name="tripNameText">Trip Name:</string>
    <string name="editName">Route 66</string>

    <!-- String name for Start City id -->
    <string name="startCity">Start City:</string>
    <string name="editStartCity">Toronto</string>

    <!-- String name for End City id -->
    <string name="endCity">End City:</string>
    <string name="editEndCity">New York</string>

    <!-- String for departure date -->
    <string name="departName">Depart Date:</string>

    <!-- String for arrivalDate date -->
    <string name="arriveName">Arrive Date:</string>

    <!-- Radio Button date -->
    <string name="hotelLabel">Need a hotel?</string>
    <string name="foodLabel">Need any food suggestions?</string>

    <!-- Confirm and cancel buttons -->
    <string name="confirmButton">Confirm</string>
    <string name="cancelButton">Cancel</string>

    <!-- upload button -->
    <string name="uploadButton">Upload Image</string>

    <!-- Main Activity menu options -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="action_edit_trip">Edit Trip</string>
    <string name="action_add_event">Add Event</string>
    <string name="title_activity_setup_page2">Enter Trip Info</string>
    <string name="title_activity_info_page3">Trip Info</string>
    <string name="depart_date">depart date</string>
    <string name="arrival_date">arrival date</string>
    <string name="upload_a_trip_image">Upload a trip image</string>

    <string name="trip_placeholder">Trip</string>
    <string name="city_placeholder">City</string>
    <string name="events_label">Events</string>
    <string name="label_from">From</string>
    <string name="label_to">To</string>

    <string name="title_activity_event_form">Enter Event Details</string>
    <string name="label_event_title">Title:</string>
    <string name="event_title_hint">Event</string>
    <string name="label_event_date">Date:</string>


    <string name="hint_date">YYYY-MM-DD</string>
    <string name="hint_datetime">YYYY-MM-DD HH:MM:SS</string>

    <string name="about_title_ver">Tripd v0.2</string>
    <string name="about_text">Authors: Megan Bradshaw, David Inglis, Nick Iden, Steven Knapp, Michel Lima</string>
    <string name="about_support_label">Support:</string>
    <string name="fake_phone_support_num">+1 (519) 888–8888</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
