<?xml version="1.0" encoding="utf-8"?>

<!-- SOURCE FILE HEADER COMMENT ====================================================================

  FILENAME:     fragment_trip_form.xml
  PROJECT:      PROG3150 - Assignment 01
  PROGRAMMERS:  David Inglis, Nick Iden, Steven Knapp, Michel Gomes Lima, Megan Bradshaw
  DATE:         February 8th, 2020
  DESCRIPTION:  This file contains the xml code for the setup activity.

===============================================================================================  -->



<android.widget.FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.TripFormFragment">

    <GridLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:columnCount="2"
        android:padding="20dp"
        android:rowCount="10"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Trip image
            Commenting out the image because I dont think we will have time for it
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_row="0"
            android:layout_column="0"
            android:contentDescription="@string/upload_a_trip_image"
            app:srcCompat="@android:drawable/ic_menu_report_image" />


        <Button
            android:id="@+id/uploadButton"
            android:layout_width="116dp"
            android:layout_height="51dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center|start"
            android:background="@color/colorPrimary"
            android:text="@string/uploadButton"
            android:textColor="@android:color/white" />
        -->


        <!-- Trip name -->
        <TextView
            android:id="@+id/tripNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginBottom="20dp"
            android:text="@string/tripNameText"
            android:textSize="24sp" />


        <EditText
            android:id="@+id/editName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:ems="10"
            android:hint="@string/editName"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />


        <!-- Starting city -->
        <TextView
            android:id="@+id/startCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/startCity"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editStartCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:ems="10"
            android:hint="@string/editStartCity"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />


        <!-- End city -->
        <TextView
            android:id="@+id/endCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_marginBottom="20dp"
            android:text="@string/endCity"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editEndCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:ems="10"
            android:hint="@string/editEndCity"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />


        <!-- Depart date -->
        <TextView
            android:id="@+id/departName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:text="@string/departName"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/dateDepartEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_date"
            android:inputType="date"
            tools:targetApi="o" />


        <!-- Arrival date -->
        <TextView
            android:id="@+id/arriveName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_marginBottom="20dp"
            android:text="@string/arriveName"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/dateArriveEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="1"
            android:ems="10"
            android:hint="@string/hint_date"
            android:importantForAutofill="no"
            android:inputType="date" />


        <!-- Switches -->
        <TextView
            android:id="@+id/hotelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:text="@string/hotelLabel"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/hotelSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="1"
            android:layout_gravity="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/foodLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="8"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:text="@string/foodLabel"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/foodSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="8"
            android:layout_column="1"
            android:layout_gravity="center"
            android:textSize="18sp" />


        <!-- Buttons -->
        <Button
            android:id="@+id/buttonSetupConfirm"
            android:layout_width="140dp"
            android:layout_height="46dp"
            android:layout_row="9"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/confirmButton"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/buttonSetupCancel"
            android:layout_width="140dp"
            android:layout_height="46dp"
            android:layout_row="9"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimary"
            android:bufferType="normal"
            android:text="@string/cancelButton"
            android:textColor="@android:color/white" />

    </GridLayout>
</android.widget.FrameLayout>